<?xml version="1.0" encoding="utf-8"?>
<com.example.t1g.firebaseproject.ProfileInput
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4757575">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="340dp"
        android:layout_centerInParent="true"
        android:background="@android:color/white">


    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <RadioGroup
        android:id="@+id/gender_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/name_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RadioButton
            android:id="@+id/male_input"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/male"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/female_input"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/female"
            android:textSize="18sp" />

    </RadioGroup>


    <EditText
        android:id="@+id/age_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/gender_input"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>


    <EditText
        android:id="@+id/hobbies_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/age_input"
        android:hint="@string/hobbies"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>


    <EditText
        android:id="@+id/image_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/hobbies_input"
        android:hint="@string/image_url"
        android:inputType="textUri"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error_text"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@id/cancel_button"
        android:layout_toStartOf="@id/cancel_button"
        android:text="@string/add" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/error_text"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/cancel" />
</RelativeLayout>
</com.example.t1g.firebaseproject.ProfileInput>