<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/genderUndefined"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/name_default"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/name"
        android:layout_alignStart="@id/name"
        android:layout_below="@id/name"
        android:text="@string/gender_default"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/name"
        android:layout_alignStart="@id/name"
        android:layout_below="@id/gender"
        android:text="@string/age_default"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/hobbies"
        android:layout_width="175dp"
        android:layout_height="match_parent"
        android:layout_alignLeft="@id/name"
        android:layout_alignStart="@id/name"
        android:layout_toLeftOf="@id/image"
        android:layout_marginRight="10dp"
        android:layout_below="@id/age"
        android:layout_marginBottom="20dp"
        android:text="@string/hobbies_default"
        android:textSize="18sp"
        android:layout_toStartOf="@id/image"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_alignTop="@id/name"
        android:contentDescription="@string/image_desc"
        android:src="@mipmap/baseline_face_black_18dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp" />


</RelativeLayout >