<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_view_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/genderUndefined">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/image"
        android:layout_toStartOf="@id/image"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/name_default"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@id/name"
        android:layout_alignStart="@id/name"
        android:layout_below="@id/name"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@id/image"
        android:layout_toStartOf="@id/image"
        android:text="@string/gender_default"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@id/name"
        android:layout_alignStart="@id/name"
        android:layout_below="@id/gender"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@id/image"
        android:layout_toStartOf="@id/image"
        android:text="@string/age_default"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/name"
        android:layout_alignStart="@id/name"
        android:layout_below="@id/age"
        android:layout_marginBottom="15dp"
        android:text="@string/hobbies_edit_header"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/hobbies_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/name"
        android:layout_alignStart="@id/name"
        android:layout_below="@id/hobbies"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/profile_hobbies_background"
        android:padding="5dp"
        android:gravity="top"
        android:hint="@string/hobbies"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:maxLength="200"
        android:maxLines="4"
        android:nextFocusLeft="@id/hobbies_text_field"
        android:nextFocusUp="@id/hobbies_text_field"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/name"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/image_desc"
        android:src="@mipmap/baseline_face_black_18dp" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/image"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/delete_profile" />

    <include
        android:id="@+id/delete_confirmation"
        layout="@layout/delete_confirmation"
        android:visibility="invisible" />

</RelativeLayout>