<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4757575">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/confirmation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/delete_confirmation_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/confirm_delete"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmation_text"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/cancel_delete"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/confirm_delete"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/cancel" />

    </RelativeLayout>
</RelativeLayout>